Add more size control for PopupOverlay

--- a/gwt-ol3/src/main/resources/org/vaadin/gwtol3/client/resources/popup.css
+++ b/gwt-ol3/src/main/resources/org/vaadin/gwtol3/client/resources/popup.css
@@ -43,7 +43,7 @@
 
 .ol-popup-content {
   /*width: 200px;*/
-  height: 100px;
+  /*height: 100px;*/
   overflow-y: scroll;
   overflow: auto;
   font-family: Verdana, Tahoma, "DejaVu Sans", sans-serif;
